# OracleProto

./: .env.example  .gitignore  CONTRIBUTING.md  DESIGN-ZH.md  DESIGN.md  FRAME-ZH.md  FRAME.md  LICENSE  README-ZH.md  README.md  environment.yml  evaluation.py  forecast_eval_set.db  forecast_eval_set_example.db  pyproject.toml
.github/workflows/: ci.yml
forecast_eval/: analysis.py  config.py  db.py  errors.py  leak_filter.py  llm.py  loader.py  parser.py  prompts.py  react.py  runner.py  search.py  tavily_keys.py  tools.py  types.py
forecast_eval/analysis/: __init__.py  __main__.py  accuracy.py  aggregation.py  behavior.py  calibration.py  composite.py  consistency.py  exam_score.py  (+6 more)
scripts/: build_forecast_eval_set.py  fss_sensitivity.py  migrate_split_mc_output_format.py  plot_analysis.py  smoke_leak_filter.py  verify_leak_filter_e2e.py
tests/: conftest.py  test_aggregation.py  test_analysis.py  test_behavior.py  test_calibration.py  test_composite_score.py  test_config.py  test_consistency.py  test_db.py  test_db_v4_migration.py  test_db_v5_migration.py  test_errors.py  test_evaluation.py  test_exam_score.py  test_fss.py  test_fss_sensitivity.py  test_grid_analysis.py  test_grid_dispatcher.py  test_grid_settings_view.py  test_grid_slug.py  test_inference.py  test_leak_filter.py  test_llm_no_browsing.py  test_parser.py  test_parser_belief.py  test_plot_analysis_grid.py  test_prompts.py  test_proper_score.py  test_react.py  test_react_reflection.py  test_runner_grid_model.py  test_runner_resume.py  test_search.py  test_smoke_dry_run.py  test_training_cutoff.py
