[project]
name = "oracleproto"
version = "0.1.0"
description = "A reproducible framework for benchmarking LLM native forecasting via knowledge cutoff and temporal masking."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "openai>=1.50",
    "tavily-python>=0.5",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "httpx>=0.27",
    "tenacity>=9.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "matplotlib>=3.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    # Cell-local Settings sub-views (TAVILY_MAX_RESULTS / REACT_MAX_SEARCH_CALLS
    # downcast from list[int] to int by the grid dispatcher) trigger a
    # serializer warning when dumped via model_dump. The single-int form is
    # intentional (DESIGN.md decision 5) so config_snapshot stays self-describing.
    "ignore::UserWarning:pydantic.*",
]
